avcodec/mpegvideo_enc: Reset stuffing bits if they are not supported

Fixes: Assertion failure
Fixes: Ticket8202

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>
(cherry picked from commit 996797f8ed06e6ccb5287e18a5de88b2b0db31ec)
Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>